# auto-podcast

./: .env  .env.example  .gitignore  13.7.0  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_STUDIO_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_README.md  MODIFICATIONS.md  QUICKSTART_STUDIO.md  QUICK_CONFIG_GUIDE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  Refining Podcast Script Prompts.md  SEGMENTED_PIPELINE_GUIDE.md  TWO_STAGE_GENERATION.md  check_env.py  config.example.yaml  config.test.yaml  constitution.md  eslint.config.cjs  index.html  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  studio.py  test_ai_daily_news.py  test_tts_audio.py  test_tts_fix.py  vite.config.ts
.specify/: feature.json  init-options.json  integration.json  spec-kit.lock.yml  workspace.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: repository-map.md
config/: settings.yaml
config/base/: pipeline.yaml  settings.yaml
docs/: ARCHITECTURE.md  CONFIG_MIGRATION_GUIDE.md  DATA_VALIDATION.md  DESIGN_AUTO_TOPIC.md  SCRIPT_GENERATION_DATA_FLOW.md  SOURCE_LABELING_WORKFLOW.md  TESTING.md  豆包TTS_V3单向流式API文档.md
docs/acceptance/: CDP_ACCEPTANCE_REPORT.md
electron/: acceptanceRunner.js  configManager.js  constants.js  httpClient.js  llmService.js  main.js  nodeValidator.js  preload.js  radarService.js  workflowRunner.js
electron/services/: fileService.js  providerConfigBuilder.js
engine/: __init__.py  bridge.py  daemon.py  newsnow.lock.json  trendradar.lock.json
n8n_bridge/: QUICK_START.md  README.md  __init__.py  docker-compose.yml  main.py  start_n8n_docker.bat  test_api.py
n8n_bridge/workflows/: auto_podcast_full_pipeline.json  config_management.json  step_by_step.json
nodes/assets/: config.py  node.py  test.py
nodes/audio_postprocess/: config.py  node.py  (+1 more)
protocol/: __init__.py  config_base.py  config_validator.py  dedup.py  episode_models.py  llm_client.py  llm_gateway.py  manifest.py  migration.py  morning_news.py  node_runner.py  node_validator.py  presets.py  state.py
scripts/: README.md  build_check.py  dev.js  extract_node_schemas.py  fix_test_encoding.py  get_fetch_sources.py  integration_test.py  live_tts_smoke.py  merge_env.py  newsnow_runtime.js  python313.js  run_cdp_acceptance.js  run_demo_news.py  setup_trendradar_runtime.py  split_env.py  sync_newsnow.py  sync_trendradar.py  test_all_nodes.py  test_config.py  test_llm_integration.js  trendradar_cli.py  verify_integration.js  verify_nodes.py  verify_refactor.ps1  verify_refactor.sh  verify_trendradar_settings.py
src/: App.tsx  filter.py  global.d.ts  index.css
tests/: mock_data.py  test_e2e_pipeline.py  test_episode_schema.py  test_facts_node.py  test_fetch_focus_prefilter.py  test_morning_news_pipeline.py  test_nodes.py  test_router.py  test_state_migration.py  test_tencent_yuanbao_scoring.py  test_utils.py  test_web_service.py
(+265 files in other folders)
