# Auto-Podcast LangGraph Project Configuration
# 基于 LangGraph 的播客自动生成系统
#
# 使用方式：
#   pip install -e .              # 开发模式安装
#   python main.py                # 运行主程序
#
# 更新日期：2026-02-03

[project]
name = "auto-podcast"
version = "2.0.0"
description = "LangGraph-based automated podcast generation pipeline"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
  "langchain>=0.1.0",
  "langchain-core>=0.1.0",
  "langchain-openai>=0.0.5",
  "langgraph>=0.0.40",
  "feedparser>=6.0.11",
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.3",
  "trafilatura>=1.6.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "simhash>=2.1.2",
  "jieba>=0.42.1",
  "edge-tts>=7.2.7",
  "pydub>=0.25.1",
  "pyloudnorm>=0.1.1",
  "Pillow>=10.0.0",
  "rich>=13.7.0",
]

 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [tool.setuptools.packages.find]
 where = ["."]
 include = ["src", "src.*"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.8"
venvPath = "env"
venv = ".venv"
