# Auto-Podcast Studio - Electron App
# AI-powered podcast generation with visual workflow editor
#
# Usage:
#   npm install                   # Install all dependencies (Node.js + Python)
#   npm start                     # Launch Electron app
#
# Updated: 2026-02-08

[project]
name = "auto-podcast"
version = "2.4.0"
description = "Electron-based podcast generation with Python workflow nodes"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.3",
  "trafilatura>=1.6.0",
  "edge-tts>=7.2.7",
  "pydub>=0.25.1",
  "audioop-lts>=0.2.1; python_version >= '3.13'",
  "pyloudnorm>=0.1.1",
  "Pillow>=10.0.0",
  "rich>=13.7.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["protocol", "protocol.*", "nodes", "nodes.*"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.8"
venvPath = "env"
venv = ".venv"
