[project]
name = "podflow-studio"
version = "2.4.0"
description = "Electron-based podcast generation with Python workflow nodes"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "edge-tts>=7.2.7",
  "pydub>=0.25.1",
  "audioop-lts>=0.2.1; python_version >= '3.13'",
  "Pillow>=10.0.0",
  "rich>=13.7.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["protocol", "protocol.*", "nodes", "nodes.*"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.8"
venvPath = "env"
venv = ".venv"
